# virtualenvwrapper

./: .gitignore  .hgignore  .hgtags  .mergify.yml  .readthedocs.yaml  ChangeLog  MANIFEST.in  Makefile  README  README.es.rst  README.es.txt  README.ja.rst  README.rst  README.txt  TODO  announce.es.rst  announce.rst  pavement.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.in  test.sh  tox.ini  venv.org  virtualenvwrapper.sh  virtualenvwrapper_bashrc  virtualenvwrapper_lazy.sh
.github/: dependabot.yml
.github/workflows/: python-publish.yaml  test.yml
docs/: Makefile  requirements.txt  spelling_wordlist.txt
docs/en/: command_ref.rst  developers.rst  extensions.rst  history.rst  index.rst  install.rst  projects.rst  scripts.rst  tips.rst  translations.rst
docs/es/: command_ref.rst  developers.rst  extensions.rst  hooks.rst  index.rst  install.rst  plugins.rst  scripts.rst  tips.rst
docs/ja/: command_ref.rst  developers.rst  extensions.rst  history.rst  hooks.rst  index.rst  install.rst  plugins.rst  projects.rst  scripts.rst  tips.rst
docs/source/: command_ref.rst  conf.py  design.rst  developers.rst  extensions.rst  glossary.rst  history.rst  hooks.rst  index.rst  install.rst  plugins.rst  projects.rst  scripts.rst  tips.rst
docs/source/es/: developers.rst  hooks.rst  install.rst  plugins.rst
docs/sphinx/: conf.py
docs/sphinx/pkg/: conf.py
docs/sphinx/web/: conf.py
docs/sphinx/web/templates/: base.html
docsource/: Makefile  command_ref.rst  conf.py  developers.rst  history.rst  hooks.rst  index.rst  make.bat  tips.rst
sphinx/pkg/: conf.py
sphinx/web/templates/: layout.html
tests/: manual_test_install.sh  run_tests  setup.sh  test.sh  test_add2virtualenv.sh  test_allvirtualenv.sh  test_cd.sh  test_cd_alias.sh  test_cd_space_in_name.sh  test_cp.sh  test_cpvirtualenv.sh  test_deactivate.sh  test_derive_workon_home.sh  test_dir_stack.sh  test_expandpath.sh  test_hook_dir.sh  test_install.sh  test_lazy.sh  test_lazy_extending.sh  test_lazy_loaded.sh  test_lazy_run.sh  test_log_dir.sh  test_log_file.sh  test_ls.sh  test_lsvirtualenv.sh  test_misconfigured.sh  test_mktmpenv.sh  test_mkvirtualenv.sh  test_mkvirtualenv_associate.sh  test_mkvirtualenv_install.sh  test_mkvirtualenv_requirements.sh  test_project.sh  test_project_activate.sh  test_project_cd.sh  test_project_mk.sh  test_project_templates.sh  test_rmvirtualenv.sh  test_run_hook.sh  test_setvirtualenvproject.sh  test_support.sh  (+6 more)
tests/testpackage/: setup.py
tests/testtemplate/: setup.py
tests/testtemplate/mytemplates/: main.py
virtualenvwrapper/: __init__.py  hook_loader.py  make_hooks.py  make_hooks_pre_initialize.sh  project.py  user_scripts.py  user_scripts_initialize.sh  user_scripts_pre_initialize.sh  version.py
