[metadata]
name = virtualenvwrapper
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Enhancements to virtualenv
description-file = README.txt
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
Intended Audience :: Developers
    Environment :: Console
keywords =
    virtualenv
home-page = https://virtualenvwrapper.readthedocs.io/
zip_safe = False

[files]
packages =
    virtualenvwrapper
namespace_packages =
    virtualenvwrapper
scripts =
    virtualenvwrapper.sh
    virtualenvwrapper_lazy.sh

[global]
zip_safe = False
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
virtualenvwrapper.initialize =
    user_scripts = virtualenvwrapper.user_scripts:initialize
    project = virtualenvwrapper.project:initialize
virtualenvwrapper.initialize_source =
    user_scripts = virtualenvwrapper.user_scripts:initialize_source
virtualenvwrapper.pre_mkvirtualenv =
    user_scripts = virtualenvwrapper.user_scripts:pre_mkvirtualenv
virtualenvwrapper.post_mkvirtualenv_source =
    user_scripts = virtualenvwrapper.user_scripts:post_mkvirtualenv_source
virtualenvwrapper.pre_cpvirtualenv =
    user_scripts = virtualenvwrapper.user_scripts:pre_cpvirtualenv
virtualenvwrapper.post_cpvirtualenv_source =
    user_scripts = virtualenvwrapper.user_scripts:post_cpvirtualenv_source
virtualenvwrapper.pre_rmvirtualenv =
    user_scripts = virtualenvwrapper.user_scripts:pre_rmvirtualenv
virtualenvwrapper.post_rmvirtualenv =
    user_scripts = virtualenvwrapper.user_scripts:post_rmvirtualenv
virtualenvwrapper.project.pre_mkproject =
    project = virtualenvwrapper.project:pre_mkproject
virtualenvwrapper.project.post_mkproject_source =
    project = virtualenvwrapper.project:post_mkproject_source
virtualenvwrapper.pre_activate =
    user_scripts = virtualenvwrapper.user_scripts:pre_activate
virtualenvwrapper.post_activate_source =
    project = virtualenvwrapper.project:post_activate_source
    user_scripts = virtualenvwrapper.user_scripts:post_activate_source
virtualenvwrapper.pre_deactivate_source =
    user_scripts = virtualenvwrapper.user_scripts:pre_deactivate_source
virtualenvwrapper.post_deactivate_source =
    user_scripts = virtualenvwrapper.user_scripts:post_deactivate_source
virtualenvwrapper.get_env_details =
    user_scripts = virtualenvwrapper.user_scripts:get_env_details

[pbr]
warnerrors = true

[wheel]
universal = true

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
